# brainRot-backend

./: .env.example  .gitignore  pyproject.toml  render.yaml
app/: config.py  database.py  main.py
app/models/: note.py  user.py
app/routes/: auth.py  login.py  notes.py
app/schemas/: auth_schema.py  note_schema.py  user_schema.py
app/utils/: cloudinary_client.py  dependencies.py  device.py  email.py  jwt.py  security.py
