[project]
name = "brainrot-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.0.1",
    "fastapi>=0.136.1",
    "passlib>=1.7.4",
    "pydantic[email]>=2.13.4",
    "motor>=3.3.2",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "uvicorn>=0.47.0",
    "fastapi-mail>=1.6.4",
    "authlib>=1.7.2",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
]
